tests/errors/Dima/assmnt_float_to_int.c
int main()
{
	int a;
	a = 1.1;
	//hjk //нужно раскоментить чтобы код дальнейший читался корректно
	return 0;
}